--- a/AffordAboard/app/src/main/AndroidManifest.xml
+++ b/AffordAboard/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.AffordAboard"
         tools:targetApi="31">
         <activity
+            android:name=".FeedActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignupActivity2"
             android:exported="false" />
         <activity
