--- a/AffordAboard/app/src/main/AndroidManifest.xml
+++ b/AffordAboard/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         tools:targetApi="31">
         <activity
             android:name=".newAdventure"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".FeedActivity"
             android:exported="false" />
