--- a/AffordAboard/app/src/main/AndroidManifest.xml
+++ b/AffordAboard/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,6 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AffordAboard"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
             android:name=".RecommendationsActivity"
@@ -19,10 +21,10 @@
             android:exported="false" />
         <activity
             android:name=".newAdventure"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".FeedActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".SignupActivity2"
             android:exported="false" />
