--- a/AffordAboard/app/src/main/AndroidManifest.xml
+++ b/AffordAboard/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
+            android:name=".EditStatsActivity"
+            android:exported="false" />
+        <activity
             android:name=".RecommendationsActivity"
             android:exported="false" />
         <activity
